refactor: Optimized interface for client